# dafydd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
benches/: README.md  serial_scan.rs  tcp_scan.rs  usb_scan.rs
python/dafydd/: __init__.py  __init__.pyi
src/: correlation.rs  error.rs  lib.rs  main.rs  runtime.rs  streaming.rs  types.rs  watch.rs
src/net/: arp.rs  icmp.rs  mdns.rs  mod.rs  ndp.rs  pcap.rs  ssdp.rs  syn_scan.rs
src/serial/: mod.rs  probe.rs
src/tcp/: mod.rs  scan.rs
src/usb/: mod.rs
tests/: __init__.py  conftest.py  test_boundary.py  test_serial.py  test_tcp.py  test_types.py  test_usb.py
tests/fixtures/: __init__.py  platform.py  serial_simulator.py
