[package]
name = "dafydd"
version = "0.1.0"
edition = "2021"
description = "Device discovery over Serial, USB, and TCP/IP — Python bindings via PyO3"
license = "MIT"
rust-version = "1.95"

[lib]
name = "dafydd"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "macros"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
serialport = "4"
tokio-serial = "5"
nusb = { version = "0.2", features = ["tokio"] }
if-addrs = "0.15"
ipnet = "2"
thiserror = "2"
tracing = "0.1"
socket2 = { version = "0.6", features = ["all"] }
smallvec = { version = "1", features = ["union"] }
futures-util = { version = "0.3", default-features = false }

# Pure-Rust ARP cache readers (no subprocess).
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# `GetIpNetTable2` and `MIB_IPNET_TABLE2`/`MIB_IPNET_ROW2` live behind the
# `Win32_NetworkManagement_Ndis` feature in windows-sys 0.59.
windows-sys = { version = "0.59", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
] }

[features]
default = []
tcp-fast-open = []

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "tcp_scan"
harness = false

[[bench]]
name = "serial_scan"
harness = false

[[bench]]
name = "usb_scan"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1

[lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# SerialDiscovery in serial::, TcpDiscovery in tcp:: etc. is intentional naming.
module_name_repetitions = "allow"
