[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "dafydd"
version = "0.1.1"
description = "Device discovery over Serial, USB, and TCP/IP"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["serial", "usb", "tcp", "discovery", "hardware", "embedded", "iot"]
authors = [{ name = "Terence Stenvold", email = "tstenvold@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tstenvold/dafydd"
Repository = "https://github.com/tstenvold/dafydd"
Changelog = "https://github.com/tstenvold/dafydd/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/tstenvold/dafydd/issues"

[project.optional-dependencies]
dev = ["maturin>=1.7,<2", "pytest>=8.0", "pytest-timeout", "ruff", "pyright"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
